--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,4 +1,5 @@
-.new-event-form {
+.new-event-form,
+.new-greeting-form {
     display: grid;
     grid-template-columns: 100px 1fr;
     grid-gap: 10px;
