--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,20 +1,50 @@
-.hero {
-    font-size: 3rem;
-    color: blueviolet;
+.home {
+    background-image: url('../images/main_bg-min.jpg');
+    background-size: cover;
+    height: 200px;
 }
 
-.description {
+.events {
+    background-image: url('../images/events-bg.jpg');
+    background-size: cover;
+    height: 200px;
+}
+.about {
+    background-image: url('../images/about-bg.jpg');
+    background-size: cover;
+    height: 200px;
+}
+.party {
+    background-image: url('../images/party-bg.jpg');
+    background-size: cover;
+    height: 200px;
+}
+
+.hero {
+    color: white;
+    height: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.hero .title {
+    font-size: 4rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #333333;
+}
+
+.hero .description {
     font-size: 0.9rem;
 }
 
-.new-event-btn {
+.btn {
     padding: 10px 20px;
     margin: 10px 0;
     border: none;
     background-color: blueviolet;
     color: white;
     border-radius: 20px;
-    box-shadow: 3px 6px 3px -3px #999999;
+    box-shadow: 3px 6px 3px -3px #666666;
 }
 
 .loader-container {
@@ -23,4 +53,17 @@
 
 h3 {
     color: blueviolet;
+}
+
+.user-events {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 5px;
+}
+
+.user-events>div {
+    padding: 3px;
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: 200px 150px repeat(3, minmax(min-content, max-content));
 }
