--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -21,7 +21,7 @@
 
 .nav-container a:hover,
 .nav-container span:hover {
-    text-decoration: underline;
+    font-weight: bold;
 }
 
 .nav-container span {
@@ -30,7 +30,8 @@
 }
 
 .active-link {
-    color: red;
+    font-weight: bold;
+    color: var(--primary);
 }
 
 /* Mobile */
