--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,5 +1,85 @@
 .chat-screen-container {
-    height: 50vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
+    border: 1px #2c303b solid;
+}
+
+.chat-container {
+    display: flex;
+    flex: 1;
+}
+
+.whos-online-list-container {
+    width: 150px;
+    flex: none;
+    background-color: #2c303b;
+    color: white;
+    overflow-y: scroll;
+}
+
+.chat-list-container {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+}
+
+.message-list-container {
+    overflow-y: scroll;
+    flex: 1;
+}
+
+.message-list-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px
+}
+
+.message-list-container ul li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.sender-username {
+    font-weight: bold;
+}
+
+.message {
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+}
+
+.send-container form {
+    display: flex;
+}
+
+.send-container form input {
+    color: inherit;
+    background: none;
+    outline: none;
+    border-top: 1px #2c303b solid;
+    flex: 1;
+    font-size: 16px;
+}
+
+.whos-online-list {
+    padding: 0;
+    margin: 10px;
+    font-size: 0.9rem;
+}
+
+.whos-online-list li {
+    display: grid;
+    grid-template-columns: 15px 1fr;
+    grid-gap: 10px;
+    margin: 10px 0;
+}
+.whos-online-list li div{
+    display: flex;
+    align-items: center;
+}
+.whos-online-pill {
+    border-radius: 50%;
+    width: 11px;
+    height: 11px;
 }
