--- a/src/styles/greetings.css
+++ b/src/styles/greetings.css
@@ -31,9 +31,9 @@
 }
 
 .greeting-wrapper {
-    border: 1px solid green;
+    border-bottom: 1px solid gray;
     display: grid;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: 75% 1fr;
     grid-gap: 10px;
 }
 
@@ -43,8 +43,10 @@
 
 .greeting-wrapper .buttons span {
     cursor: pointer;
-    color: var(--secondary-dark);
+    color: var(--primary-light);
     margin: 5px;
+    filter: drop-shadow(1px 1px 2px #666666);
+    /* text-shadow: 2px 2px 2px #333333; */
 }
 
 .greeting-wrapper .readonly * {
