--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,9 @@
     src: local('OpenSans'), url('./fonts/Open_Sans/OpenSans-Bold.ttf') format('truetype');
     font-weight: bold;
 }
-
+html {
+    height: 100%
+}
 body,
 html {
     margin: 0;
@@ -37,6 +39,7 @@ html {
 
 button {
     font-family: var(--body-font);
+    cursor: pointer;
 }
 
 .outer-wrapper {
