--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -19,6 +19,7 @@
 }
 
 .chat-list-container {
+    background-color: white;
     width: 85%;
     display: flex;
     flex-direction: column;
@@ -74,10 +75,12 @@
     grid-gap: 10px;
     margin: 10px 0;
 }
-.whos-online-list li div{
+
+.whos-online-list li div {
     display: flex;
     align-items: center;
 }
+
 .whos-online-pill {
     border-radius: 50%;
     width: 11px;
