--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,14 @@
 .banner {
     background-size: cover;
-    height: 200px;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+}
+
+.main-body {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .home {
