--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,10 @@
 .banner {
-    background-size: cover;
+    position: absolute;
     width: 100%;
-    height: 0;
-    padding-bottom: 100%;
+    bottom: 0;
+    top: 70px;
+    background-size: cover;
+    min-height: max-content;
 }
 
 .main-body {
@@ -37,7 +39,7 @@
 
 .hero {
     color: white;
-    height: 200px;
+    height: 150px;
     display: flex;
     align-items: center;
 }
@@ -94,4 +96,16 @@ h3 {
     padding: 0;
     padding-left: 20px;
     margin: 0;
+}
+
+.outer-wrapper {
+    display: flex;
+    justify-content: center;
+    width: var(--mid-container-width);
+}
+
+@media (max-width: 768px) {
+    .banner {
+        top: 40px;
+    }
 }
