--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -87,13 +87,13 @@ h3 {
     grid-template-columns: 200px 150px repeat(3, minmax(min-content, max-content));
 }
 
-.event-datails {
+.event-details {
     display: grid;
     grid-template-columns: 100px 1fr;
     grid-gap: 10px;
 }
 
-.event-datails ul {
+.event-details ul {
     padding: 0;
     padding-left: 20px;
     margin: 0;
@@ -108,5 +108,17 @@ h3 {
 @media (max-width: 768px) {
     .banner {
         top: 40px;
+    }
+    .user-events>div {
+        margin-bottom: 5px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .user-events>div span {
+        margin-right: 10px;
+        width: 30%;
+    }
+    .user-events>div span:first-child {
+        font-weight: bold;
     }
 }
