--- a/src/styles/greetings.css
+++ b/src/styles/greetings.css
@@ -46,7 +46,6 @@
     color: var(--primary-light);
     margin: 5px;
     filter: drop-shadow(1px 1px 2px #666666);
-    /* text-shadow: 2px 2px 2px #333333; */
 }
 
 .greeting-wrapper .readonly * {
@@ -59,5 +58,12 @@
 @media (max-width: 768px) {
     .greeting-wrapper {
         grid-template-columns: 1fr;
+    }
+    .greeting-tabs-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .greeting-tab {
+        filter: drop-shadow(1px 1px 2px #666666);
     }
 }
